--- a/login/Cargo.toml
+++ b/login/Cargo.toml
@@ -4,5 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+codee = "0.2.0"
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.6.15", features = ["csr", "nightly"] }
+leptos-use = {version = "0.15.2",  features = ["use_cookie"] }
+reactive_graph = "0.1.3"
+serde = {version = "1.0.217", features = ["derive"] } 
+serde_json = "1.0.135"
+wasm-bindgen-futures = "0.4.49"
+web-sys = {version = "0.3.76" , features = ["Window", "RequestInit", "Response"]}
