--- a/login/Cargo.toml
+++ b/login/Cargo.toml
@@ -10,5 +10,6 @@ leptos = { version = "0.6.15", features = ["csr", "nightly"] }
 leptos-use = {version = "0.15.2",  features = ["use_cookie"] }
 serde = {version = "1.0.217", features = ["derive"] } 
 serde_json = "1.0.135"
+thiserror = "2.0.11"
 wasm-bindgen-futures = "0.4.49"
-web-sys = {version = "0.3.76" , features = ["Window", "RequestInit", "Response"]}
+web-sys = {version = "0.3.76" , features = ["Window", "RequestInit", "Response", "Location"]}
